--- a/NbBusConsole/App.config
+++ b/NbBusConsole/App.config
@@ -6,7 +6,7 @@
 	</configSections>
 
 	<connectionStrings>
-    <add name="DataConnectionString" connectionString="Data Source=E:\MySource\nbzs\NbBusServer\NbBusService\App_Data\Database.sdf;Persist Security Info=False;"
+    <add name="DataConnectionString" connectionString="Data Source=E:\MySource\Git\NingboBus\NbBusService\App_Data\Database.sdf;Persist Security Info=False;"
       providerName="System.Data.SqlServerCe.4.0" />
 	</connectionStrings>
 	<dataConfiguration defaultDatabase="DataConnectionString" >
