--- a/NbBusService/Web.config
+++ b/NbBusService/Web.config
@@ -31,6 +31,7 @@
   </log4net>
   
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
