--- a/NbBusService/Web.config
+++ b/NbBusService/Web.config
@@ -33,9 +33,9 @@
   <system.web>
     <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.0">
-      <assemblies>
+      <!--<assemblies>
         <add assembly="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
-      </assemblies>
+      </assemblies>-->
     </compilation>
   </system.web>
   <system.serviceModel>
