--- a/NbBusService/Web.config
+++ b/NbBusService/Web.config
@@ -6,10 +6,10 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DataConnectionString" connectionString="Data Source=|DataDirectory|\Database.sdf;Persist Security Info=False;" providerName="System.Data.SqlServerCe.4.0"/>-->
-    <add name="DataConnectionString" connectionString="ConnectionStringSample"
+    <add name="connectionstringname" connectionString="ConnectionStringSample"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <dataConfiguration defaultDatabase="DataConnectionString"/>
+  <dataConfiguration defaultDatabase="connectionstringname"/>
   <log4net debug="false">
     <appender name="rollingFile" type="log4net.Appender.RollingFileAppender,log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821">
       <param name="File" value="log.txt"/>
