--- a/NbBusService/Web.config
+++ b/NbBusService/Web.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DataConnectionString" connectionString="Data Source=|DataDirectory|\Database.sdf;Persist Security Info=False;" providerName="System.Data.SqlServerCe.4.0"/>-->
-    <add name="connectionstringname" connectionString="ConnectionStringSample"
+    <add name="connectionstringname" connectionString="Server=localhost;Database=my-app-debug;User ID=test;Password=dfy5fgFdsvV;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <dataConfiguration defaultDatabase="connectionstringname"/>
