--- a/NbBusService/Web.config
+++ b/NbBusService/Web.config
@@ -5,11 +5,11 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net,Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821"/>
   </configSections>
   <connectionStrings>
-    <!--<add name="DataConnectionString" connectionString="Data Source=|DataDirectory|\Database.sdf;Persist Security Info=False;" providerName="System.Data.SqlServerCe.4.0"/>-->
+    <add name="DataConnectionString" connectionString="Data Source=|DataDirectory|\Database.sdf;Persist Security Info=False;" providerName="System.Data.SqlServerCe.4.0"/>
     <add name="connectionstringname" connectionString="Server=localhost;Database=my-app-debug;User ID=test;Password=dfy5fgFdsvV;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <dataConfiguration defaultDatabase="connectionstringname"/>
+  <dataConfiguration defaultDatabase="DataConnectionString"/>
   <log4net debug="false">
     <appender name="rollingFile" type="log4net.Appender.RollingFileAppender,log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821">
       <param name="File" value="log.txt"/>
