--- a/NbBusService/Web.config
+++ b/NbBusService/Web.config
@@ -9,7 +9,7 @@
     <add name="connectionstringname" connectionString="Server=localhost;Database=my-app-debug;User ID=test;Password=dfy5fgFdsvV;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <dataConfiguration defaultDatabase="DataConnectionString"/>
+  <dataConfiguration defaultDatabase="connectionstringname"/>
   <log4net debug="false">
     <appender name="rollingFile" type="log4net.Appender.RollingFileAppender,log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821">
       <param name="File" value="log.txt"/>
